force-app/main/default/objects/AzureB2CAuthProvider__mdt/AzureB2CAuthProvider__mdt.object-meta.xml
<CustomObject>
    <label>AzureB2CAuthProvider</label>
    <pluralLabel>AzureB2CAuthProvider</pluralLabel>
</CustomObject>