force-app/main/default/objects/AzureB2CAuthProvider__mdt/fields/Access_Token_Url__c.field-meta.xml
<CustomField>
    <fullName>Access_Token_Url__c</fullName>
    <label>Access Token Url</label>
    <length>200</length>
    <type>Text</type>
</CustomField>