force-app/main/default/objects/AzureB2CAuthProvider__mdt/fields/Auth_Url__c.field-meta.xml
<CustomField>
    <fullName>Auth_Url__c</fullName>
    <label>Auth Url</label>
    <length>200</length>
    <type>Text</type>
</CustomField>