force-app/main/default/objects/AzureB2CAuthProvider__mdt/fields/AuthProviderName__c.field-meta.xml
<CustomField>
    <fullName>AuthProviderName__c</fullName>
    <label>AuthProviderName</label>
    <length>200</length>
    <type>Text</type>
</CustomField>