force-app/main/default/objects/AzureB2CAuthProvider__mdt/fields/Consumer_Secret__c.field-meta.xml
<CustomField>
    <fullName>Consumer_Secret__c</fullName>
    <label>Consumer Secret</label>
    <length>200</length>
    <type>Text</type>
</CustomField>