force-app/main/default/objects/AzureB2CAuthProvider__mdt/fields/PasswordPolicy__c.field-meta.xml
<CustomField>
    <fullName>PasswordPolicy__c</fullName>
    <label>PasswordPolicy</label>
    <length>200</length>
    <type>Text</type>
</CustomField>