force-app/main/default/objects/AzureB2CAuthProvider__mdt/fields/PortalName__c.field-meta.xml
<CustomField>
    <fullName>PortalName__c</fullName>
    <label>PortalName</label>
    <length>200</length>
    <type>Text</type>
</CustomField>