force-app/main/default/objects/AzureB2CAuthProvider__mdt/fields/Redirect_Url__c.field-meta.xml
<CustomField>
    <fullName>Redirect_Url__c</fullName>
    <label>Redirect Url</label>
    <length>250</length>
    <type>Text</type>
</CustomField>