force-app/main/default/objects/AzureB2CAuthProvider__mdt/fields/Supported_Profile__c.field-meta.xml
<CustomField>
    <fullName>Supported_Profile__c</fullName>
    <label>Supported Profile</label>
    <length>250</length>
    <type>Text</type>
</CustomField>